# hgraph

./: .gitignore  README.md  config.yaml  index.html  overview.md  package-lock.json  package.json  people.md  pyproject.toml  schema.yaml
.github/workflows/: pages.yml
assets/: index-B0CvePzD.js  index-CpVDcrT_.css  index-D7FHlTbi.css  index-DC_3N8Nd.css  index-rJ8duwaK.css
docs/: dependency-graph-overhaul-plan.md
examples/gauss/: README.md  build.sh  data.json  overview.md  people.md
examples/gauss/Lean/: Basic.lean  Gauss.lean
examples/gauss/blueprint/: blueprint.tex  refs.bib
examples/gauss/hgraph/: config.yaml
examples/triangular/: README.md  build.sh  data.json  overview.md
examples/triangular/Lean/: Triangular.lean
examples/triangular/blueprint/: blueprint.tex  refs.bib
frontend/: .bisect.mjs  .cdiag.mjs  .dbg.mjs  .graphtest.mjs  .ident.mjs  .islive.mjs  .rv.mjs  .v.mjs  .wdiag.mjs  README-DEV.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  chapterTree.ts  citeindex.ts  depgraph.ts  graphDot.ts  index.css  katexLoader.ts  latex.ts  palette.ts  previews.ts  renderMath.d.ts  theme.ts  types.ts  typeset.ts  vizInstance.ts  vizWorker.ts
hgraph/: __init__.py  _katex_validate.js  analysis.py  cli.py  collaboration.py  dashboard.py  graph.py  katex_check.py  layout.py  render.py  server.py  site.py  sync.py
hgraph/webui/: index.html
tests/: test_blueprint_document.py  test_citeext.py  test_collaboration.py  test_lean_parser.py  test_site_theming.py  test_workspace_sync.py
(+83 files in other folders)
