[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hgraph"
version = "0.1.0"
description = "A plain-files semantic graph for autoformalization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=5.1"]

[project.scripts]
hgraph = "hgraph.cli:main"

[tool.setuptools]
packages = ["hgraph"]
